bk_ida/gobmkida/g0/sgfAddPlay
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgfAddPlay/src/sgf/sgfnode.c:906:6: error: use of undeclared identifier 'off_58C41A'
v4 = off_58C41A; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgfAddPlay/src/sgf/sgfnode.c:908:6: error: use of undeclared identifier 'off_58C41A'
v4 = off_58C41A + 2; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgfAddPlay/src/obj/4/sgfnode.o] Error 1
